tests/failing/parser/extend_with_non_fns.ri
extend u8 {
    const BAD: i32 = 1;

    struct Bad2 {}
}
